# 2pscopecontrol

./: .gitignore  README.md  pymmcore.ipynb
bh/: README.md  dll_test.py
bh/DLL_test/DLL_test1_FIFO/: CMakeLists.txt  Checkdll.c
bh/DLL_test/DLL_test2/: Checkdll.c
bh/DLL_test/DLL_test2_FIFO/: Spcm_def.h
bh/DLL_test/DLL_test3_FIFOimage/: Checkdll.c  Dcc_def.h
bh/DLL_test/DLL_test4_FIFO_withscanning/: CMakeLists.txt  Checkdll.c  backup_Checkdll.c
bh/DLL_test2/: Checkdll.c  Gvd_def.h
bh/FCS_engine/linescan_FIFO/: main.cpp
bh/FCS_engine/pointwise_FIFO/: CMakeLists.txt  main.cpp
bh/FCS_engine/socketcontrol_FIFO/: CMakeLists.txt  client.ipynb  main.cpp  main.h
bh/config/: dcc100.ini  gvd120.ini  spcm.ini
bh/examples/: use_dcc.c  use_gvd.c  use_spcm.c
bh/spc_analysis/: CMakeLists.txt  client.ipynb  compare_to_SPCM.ipynb  main.cpp  spc2img.h  test_server.ipynb
bh/spc_analysis/include/: bitmanip.h  progressbar.h  spc2img.h
bh/spc_analysis/server/: CMakeLists.txt  main.cpp
bh/spc_analysis/standalone/: main.cpp
doc/: FCS_control_setup.md  computer_setup.md
gui/: Untitled.ipynb
nidaq/nidaq_test/: CMakeLists.txt  main.cpp
notebooks/: FCS_control.ipynb  Untitled1.ipynb  image_to_scanner_targets.ipynb  image_to_target_points.ipynb  insight_control.ipynb  napari_mm.ipynb  power_calibration.ipynb  pymmcore_FLIM_funcs.ipynb  scanner_control.ipynb  scopecontrolwidget.py  widget-Copy1.ipynb  widget.ipynb
qt_version/: pymmcore_FLIM_funcs.ipynb
qt_version/gui/: form.ui  widget.py
socket_comm/: README.md
socket_comm/py_client_cpp_server/server/: main.cpp
socket_comm/py_client_cpp_server2/: Untitled.ipynb  client.py
socket_comm/py_client_cpp_server2/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
socket_comm/py_client_cpp_server2/server/: CMakeLists.txt  main.cpp
socket_comm/py_client_py_server/: server.py
socket_comm/py_client_py_server/.ipynb_checkpoints/: client-checkpoint.py
